@@ -218,6 +218,10 @@ Working version
   (Sébastien Hinderer, review by Gabriel Scherer and David Allsopp)
 
 ### Internal/compiler-libs changes:
+
+- #11847: small refactorings in the type checker
+  (Gabriel Scherer, review by Nicolás Ojeda Bär)
+
 - #11027: Separate typing counter-examples from type_pat into retype_pat;
   type_pat is no longer in CPS.
   (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)
